--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^5.0.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^8.5.1"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.16"
   }
 }
