--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
